--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -204,8 +204,8 @@
       <div><h3>Welcome to your new digital HQ</h3></div>
       
       <div class="buttonsSection6">
+        <button class="buttonTalk2">Talk to sales</button>
         <button class="buttonTry">Try for free</button>
-        <button>Talk to sales</button>
       </div>
 
     </section>
@@ -213,45 +213,52 @@
   </main>
 
   <footer>
-    <img src="./images/iso-slack.png" alt="Slack logo" />
     <div>
+      <img class="imageIsoSlack" src="./images/iso-slack.png" alt="Slack logo" />
+    </div>
+
+    <div class="uLists">
+      <div>
       <ul>
-        <li>WHY SLACK?</li>
+        <li class="headList">WHY SLACK?</li>
         <li>Slack vs. Email</li>
         <li>Channels</li>
         <li>Engagement</li>
         <li>Scale</li>
         <li>Watch the Demo</li>
-      </ul>
-
+      </ul></div>
+      
+      <div>
       <ul>
-        <li>PRODUCT</li>
+        <li class="headList">PRODUCT</li>
         <li>Features</li>
         <li>Integrations</li>
         <li>Enterprise</li>
         <li>Solutions</li>
         <li>Releases</li>
-      </ul>
+      </ul></div>
 
+      <div>
       <ul>
-        <li>PRICING</li>
+        <li class="headList">PRICING</li>
         <li>Plans</li>
         <li>Paid vs. Free</li>
-      </ul>
+      </ul></div>
 
+      <div>
       <ul>
-        <li>COMPANY</li>
+        <li class="headList">COMPANY</li>
         <li>About Us</li>
         <li>Leadership</li>
         <li>Investor Relations</li>
         <li>News</li>
         <li>Media Kit</li>
         <li>Careers</li>
-      </ul>
+      </ul></div>
     </div>
 
-
-    <ul>
+    <div>
+    <ul class="lastList">
       <li>Status</li>
       <li>Privacy</li>
       <li>Terms</li>
@@ -260,10 +267,12 @@
       <li>Change Region</li>
       <li>Download Slack</li>
     </ul>
+    </div>
 
     <hr>
 
-    <ul>
+    <div>
+    <ul class="socialMediaList">
       <li>
         <i class="fab fa-twitter"></i>
       </li>
@@ -277,8 +286,8 @@
         <i class="fab fa-linkedin"></i>
       </li>
     </ul>
-
-    <div>
+    </div>
+    <div class="small">
       <small>
         &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
         their respective owners.
