small changes in iteration 1

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -68,8 +68,11 @@
         <button class="buttonSignUp">Sign up with email</button>
 
         <button class="buttonGoogle">
-          <img class="imageGoogle" src="./images/logo-google.png" alt="Google logo" />
-          <span>Sign up with Google</span>
+          <div>
+          <img class="imageGoogle" src="./images/logo-google.png" alt="Google logo" /></div>
+          <div>
+            
+          <span>Sign up with Google</span></div>
         </button>
       </div>
 
@@ -201,7 +204,7 @@
     </section>
 
     <section class="section6">
-      <div><h3>Welcome to your new digital HQ</h3></div>
+      <div><h3>Welcome to your new<br> digital HQ</h3></div>
       
       <div class="buttonsSection6">
         <button class="buttonTalk2">Talk to sales</button>
