first steps in iteration 2

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -58,7 +58,7 @@
   </nav>
 
   <header>
-    <div>
+    <div class="leftSite">
       <h1>Great teamwork <br>starts 
       with a digital <br>HQ</h1>
 
